# cpp-cmake-template

./: .gitignore  404.html  CMakeLists.txt  Kconfig  Makefile  README.md  index.html  mkdocs.yml  search.html
.github/workflows/: docs.yml
cmake/: static_analyzers.cmake  target_compile_options_common.cmake
examples/: CMakeLists.txt
include/cpp-cmake-template/: version.hpp
test/: CMakeLists.txt
